update(): fix pixels to match spacing in README

--- a/style.css
+++ b/style.css
@@ -18,27 +18,27 @@ body {
   display: block;
   max-width: 560px;
   margin: 0 auto;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 header {
   border-bottom: 4px solid hsl(0deg, 0%, 30%);
   background-color: hsl(0deg, 0%, 100%);
 }
 .intro-chunk, .card {
-  padding: 20px;
+  padding: 24px;
 }
 .intro-chunk p {
   width: 50%;
 }
 .card {
-  margin-top: 40px;
+  margin-top: 32px;
   background-color: hsl(0deg, 0%, 100%);
   border-bottom: 4px solid hsl(0deg, 0%, 30%);
 }
 .indented-heading {
-  margin-top: -12px;
-  margin-left: -30px;
+  margin-top: -16px;
+  margin-left: -32px;
   max-width: max-content;
   padding: 16px 32px;
   background-color: hsl(45deg, 100%, 50%); /* (lighter) */
